--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^1.42.2",
+    "styled-components": "^5.3.6",
     "typewriter-effect": "^2.18.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
