--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.3",
     "react-icons": "^4.9.0",
     "react-parallax-tilt": "^1.7.151",
     "react-pdf": "^7.1.2",
