--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "source-map-loader": "^5.0.0",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
